--- a/app/src/main/res/layout/home_toolbar.xml
+++ b/app/src/main/res/layout/home_toolbar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -30,6 +31,7 @@
             app:layout_constraintEnd_toStartOf="@id/home_flashcard_iv"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
+
         <ImageView
             android:id="@+id/home_flashcard_iv"
             android:layout_width="24dp"
