--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -9,26 +9,31 @@
     android:gravity="center"
     tools:context=".ReviewActivity">
 
-    <TextView
-        android:id="@+id/review_correct_tv"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="맞았습니다!"
-        android:textSize="21sp"
-        android:textColor="@color/purple_60"
-        android:fontFamily="@font/notosans_medium"
-        android:layout_gravity="center"/>
+        android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/review_incorrect_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="틀렸습니다"
-        android:textSize="21sp"
-        android:textColor="@color/black_80"
-        android:fontFamily="@font/notosans_medium"
-        android:layout_gravity="center"
-        android:visibility="gone"/>
+        <TextView
+            android:id="@+id/review_correct_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="맞았습니다!"
+            android:textSize="21sp"
+            android:textColor="@color/purple_60"
+            android:fontFamily="@font/notosans_medium"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:id="@+id/review_incorrect_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="틀렸습니다"
+            android:textSize="21sp"
+            android:textColor="@color/black_80"
+            android:fontFamily="@font/notosans_medium"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+    </FrameLayout>
 
     <Button
         android:id="@+id/review_gostudy_btn"
